# arrow

./: README.md  arrow.opam  arrow2.opam  dune-project
lib/: arrow.ml  arrow.mli  arrow2.ml  arrow2.mli  arrow_c_api.cc  arrow_c_api.h  builder.ml  builder.mli  c_api.ml  c_wrapper.ml  compression.ml  compression.mli  datatype.ml  datatype.mli  datetime.ml  datetime.mli  discover.ml  dune  file_reader.ml  file_reader.mli  parquet_reader.ml  parquet_reader.mli  table.ml  table.mli  valid.ml  valid.mli  wrapper.ml  wrapper.mli
lib/stubs/: bindings.ml  dune
test/: dune  test_arrow.ml  test_bitset.ml  test_builder.ml  test_exceptions.ml  test_fast_read.ml  test_performance.ml  test_table.ml  test_upstream_data.ml
