(test
 (name test_performance)
 (libraries arrow2 alcotest))

(test
 (name test_table)
 (libraries arrow2 alcotest))

(test
 (name test_fast_read)
 (libraries arrow2 alcotest))

(test
 (name test_builder)
 (libraries arrow2 alcotest))

(test
 (name test_bitset)
 (libraries arrow2 alcotest))

(test
 (name test_exceptions)
 (libraries arrow2 alcotest))
