(test
 (name test_performance)
 (libraries arrow alcotest))

(test
 (name test_table)
 (libraries arrow alcotest))

(test
 (name test_fast_read)
 (libraries arrow alcotest))

(test
 (name test_builder)
 (libraries arrow alcotest))

(test
 (name test_bitset)
 (libraries arrow alcotest))

(test
 (name test_exceptions)
 (libraries arrow alcotest))

(test
 (name test_upstream_data)
 (libraries arrow alcotest))
